--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "test": "jest --watch",
+    "test:ci": "jest --ci",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "dependencies": {
@@ -23,6 +25,9 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.10.1",
+    "@testing-library/react": "^10.3.0",
+    "@types/jest": "^26.0.0",
     "@types/mongoose": "^5.7.24",
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.36",
@@ -31,11 +36,16 @@
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
+    "babel-jest": "^26.0.1",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.0.1",
     "prettier": "^2.0.5",
+    "react-test-renderer": "^16.13.1",
     "redux-devtools-extension": "^2.13.8",
+    "ts-jest": "^26.1.0",
     "typescript": "^3.9.5"
   }
 }
