--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.14.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.19",
     "next": "^9.4.4",
     "react": "^16.13.1",
@@ -27,7 +29,9 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.3.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^26.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.24",
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.36",
