--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://marcello:VwkRW8VCCRC5UGE@cluster0-cdgmt.mongodb.net/<dbname>?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://marcello:masiumasiumasiu@cluster0-cdgmt.mongodb.net/backlogmanagaer?retryWrites=true&w=majority
 MONGO_URI_DEV=mongodb://127.0.0.1:27017/backlog-manager
 
