--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,2 @@
-MONGO_URI=mongodb+srv://marcello:masiumasiumasiu@cluster0-cdgmt.mongodb.net/backlogmanagaer?retryWrites=true&w=majority
-MONGO_URI_DEV=mongodb://127.0.0.1:27017/backlog-manager
+MONGO_URI=mongodb://127.0.0.1:27017/backlog-manager
 
