--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.0",
+    "@types/testing-library__react": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "babel-jest": "^26.0.1",
@@ -46,6 +47,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.1",
+    "jest-watch-typeahead": "^0.6.0",
     "prettier": "^2.0.5",
     "react-test-renderer": "^16.13.1",
     "redux-devtools-extension": "^2.13.8",
